Chore: cors 메타 태그 추가

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="kr">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Woongjin Thinkbig website customer management system project"
-    />
+    <meta name="description" content="Woongjin Thinkbig website customer management system project" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <title>웅진 씽크빅 홈페이지 고객관리 시스템 프로젝트</title>
   </head>
   <body>
